Рефакторинг кода, сделал переиспользуемый степпер

--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -8,5 +8,5 @@ $black-48: rgba(0, 0, 0, 0.48);
 $black-16: rgba(0, 0, 0, 0.16);
 $black-8: rgba(0, 0, 0, 0.08);
 $black-4: rgba(0, 0, 0, 0.04);
-$step-color: #A6A6A6;
+$stepColor: #A6A6A6;
 $error: rgb(235, 52, 52);
