--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 * {
-	padding: 0px;
-	margin: 0px;
+	padding: 0;
+	margin: 0;
 	border: none;
 }
 
@@ -46,8 +46,7 @@ input::-ms-clear {
 button, input[type="submit"] {
     display: inline-block;
     box-shadow: none;
-    background-color: transparent;
-    background: none;
+    background: transparent none;
     cursor: pointer;
 }
 
