--- a/src/components/common/button/button.module.scss
+++ b/src/components/common/button/button.module.scss
@@ -1,16 +1,18 @@
 @import "../../../constants/colors.scss";
 
-.primary {
+.button {
+    width: fit-content;
     padding: 12px 16px;
-    background-color: $purple;
-    color: $white;
     border-radius: 4px;
-}
 
-.secondary {
-    padding: 12px 16px;
-    background-color: $white;
-    color: $purple;
-    border: 1.5px solid $purple;
-    border-radius: 4px;
+    &.primary {
+        background-color: $purple;
+        color: $white;
+    }
+
+    &.secondary {
+        background-color: $white;
+        color: $purple;
+        border: 1.5px solid $purple;
+    }
 }
