--- a/src/shared/components/common/FormPhoneInput/styles.module.scss
+++ b/src/shared/components/common/FormPhoneInput/styles.module.scss
@@ -1,5 +1,4 @@
-@use "src/constants/colors";
-@use "src/constants/mixin/form";
+@use "/src/shared/styles/mixin/form";
 
 .form {
     @include form.formInput;
@@ -10,5 +9,5 @@
 }
 
 .error {
-    color: colors.$error;
+    color: var(--color-error);
 }
