--- a/src/shared/components/ui/Modal/styles.module.scss
+++ b/src/shared/components/ui/Modal/styles.module.scss
@@ -1,9 +1,7 @@
-@import "../../../constants/colors.scss";
-
 .modal {
     height: 100vh;
     width: 100vw;
-    background-color: $black-16;
+    background-color: var(--color-black-16);
     position: fixed;
     top: 0;
     left: 0;
@@ -20,7 +18,7 @@
     padding: 30px 45px;
     width: 460px;
     height: 312px;
-    background-color: $white;
+    background-color: var(--color-white);
     border-radius: 12px;
 }
 
