--- a/src/shared/styles/mixin/form.scss
+++ b/src/shared/styles/mixin/form.scss
@@ -1,5 +1,3 @@
-@use "../colors";
-
 @mixin formInput {
     display: flex;
     flex-direction: column;
@@ -9,8 +7,8 @@
 @mixin input {
     padding: 12px;
     border-radius: 4px;
-    border: 1px solid colors.$black-16;
-    background: colors.$black-4;
+    border: 1px solid var(--color-black-16);
+    background: var(--color-black-4);
 }
 
 @mixin formList {
