сделал динамическое добавление полей

--- a/src/widgets/CreateUser/components/UserAdvantagesStep/styles.module.scss
+++ b/src/widgets/CreateUser/components/UserAdvantagesStep/styles.module.scss
@@ -1,14 +1,11 @@
-@use "/src/shared/styles/mixin/form";
-
 .form {
     flex: 1;
     display: flex;
     flex-direction: column;
-    row-gap: 60px;
 }
 
-.formList {
-    @include form.formList;
+.checkbox {
+    margin-top: 24px;
 }
 
 .buttons_group {
