--- a/src/shared/components/common/FormCheckbox/styles.module.scss
+++ b/src/shared/components/common/FormCheckbox/styles.module.scss
@@ -6,9 +6,14 @@
     min-height: 110px;
 }
 
-.input_list {
+.inputList {
     display: flex;
     flex-direction: column;
+}
+
+.label {
+    display: flex;
+    align-items: center;
 }
 
 .error {
