--- a/src/shared/components/common/GroupCheckbox/styles.module.scss
+++ b/src/shared/components/common/GroupCheckbox/styles.module.scss
@@ -1,17 +1,11 @@
-.form {
-    margin-top: 14px;
+.list {
     display: flex;
     flex-direction: column;
     row-gap: 8px;
-    min-height: 110px;
-}
-
-.inputList {
-    display: flex;
-    flex-direction: column;
 }
 
 .label {
     display: flex;
     align-items: center;
+    column-gap: 8px;
 }
