--- a/src/pages/CreateUser/components/UserAdvantagesStep/styles.module.scss
+++ b/src/pages/CreateUser/components/UserAdvantagesStep/styles.module.scss
@@ -9,7 +9,7 @@
     margin-top: 24px;
 }
 
-.buttons_group {
+.buttonsGroup {
     margin-top: auto;
     display: flex;
     justify-content: space-between;
