--- a/src/pages/CreateUser/components/UserInfoStep/styles.module.scss
+++ b/src/pages/CreateUser/components/UserInfoStep/styles.module.scss
@@ -11,7 +11,7 @@
     @include form.formList;
 }
 
-.buttons_group {
+.buttonsGroup {
     margin-top: auto;
     display: flex;
     justify-content: space-between;
